# tetgen

./: .gitignore  CMakeLists.txt  README  README.md  README_old  _plane_in_box.py  setup.py  surface_mesh.py  tetcall.cxx
examples/executable_based/: _mesh_in_box.py  _random_points.py
src/: pytetgen.cpp
